--- a/employees-api/employees-front-end/index.html
+++ b/employees-api/employees-front-end/index.html
@@ -20,18 +20,20 @@
           <option value="salary">Faixa Salarial</option>
           <option value="status">Status</option>
         </select>
-        <br />
+
         <input
           type="text"
           id="employee-data"
           name="employee-data"
           placeholder="Digite aqui..."
-        /><br />
+        />
         <input type="submit" value="Buscar" />
       </form>
 
+      <!--form id="search-data-form"></form-->
+
       <div id="employees">
-        <ul id="employees-list"></ul>
+        <table id="employees-table"></table>
       </div>
     </div>
 
