--- a/employees-api/employees-front-end/index.html
+++ b/employees-api/employees-front-end/index.html
@@ -42,5 +42,7 @@
     <div id="delete-employee"></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.12/jquery.mask.min.js"></script>
   <script src="./scripts/getEmployees.js"></script>
 </html>
