Function of deleting an employee is working.

--- a/employees-api/employees-front-end/add-employee.html
+++ b/employees-api/employees-front-end/add-employee.html
@@ -22,7 +22,7 @@
       </aside>
 
       <main class="main with-sidebar">
-        <div id="search-employees">
+        <div id="add-employee">
           <h1>Inserir/Atualizar Funcionário</h1>
 
           <form id="add-form">
