--- a/employees-api/employees-front-end/index.html
+++ b/employees-api/employees-front-end/index.html
@@ -25,7 +25,7 @@
         <div id="search-employees">
           <h1>Buscar Funcionário</h1>
 
-          <form id="search-form">
+          <!--form id="search-form">
             <label for="search-for">Buscar por:</label>
             <select name="search-for" id="search-for">
               <option value="name">Nome</option>
@@ -44,18 +44,117 @@
               placeholder="Digite aqui..."
             />
             <input type="submit" value="Buscar" />
+          </form-->
+
+          <form id="name-form">
+            <label for="name">Buscar por Nome:</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Digite aqui..."
+              required
+            />
+            <input type="submit" value="Buscar" />
           </form>
+
+            <br />
+
+          <form id="cpf-form">
+            <label for="cpf">Buscar por CPF:</label>
+            <input
+              type="text"
+              id="cpf"
+              name="cpf"
+              placeholder="Ex: 999.999.999-99"
+              data-mask="999.999.999-99"
+              required
+            />
+            <input type="submit" value="Buscar" />
+          </form>
+
+            <br />
+
+          <form id="position-form">
+            <label for="position">Buscar por Cargo:</label>
+            <input
+              type="text"
+              id="position"
+              name="position"
+              placeholder="Digite aqui..."
+              required
+            />
+            <input type="submit" value="Buscar" />
+          </form>
+
+            <br />
+
+          <form id="date-form">
+            <label for="date">Buscar por Data de Cadastro:</label>
+            <input
+              type="text"
+              id="date"
+              name="date"
+              placeholder="Ex: dd/mm/yyyy"
+              data-mask="99/99/9999"
+              required
+            />
+            <input type="submit" value="Buscar" />
+          </form>
+
+            <br />
+
+          <form id="uf-form">
+            <label for="uf">Buscar por UF de Nascimento:</label>
+            <input
+              type="text"
+              id="uf"
+              name="uf"
+              placeholder="Digite aqui..."
+              required
+            />
+            <input type="submit" value="Buscar" />
+          </form>
+
+            <br />
+
+          <form id="salary-form">
+            <label for="min-salary">Buscar por Faixa de Salário:</label>
+            <input
+              type="number"
+              id="min-salary"
+              name="min-salary"
+              placeholder="Mínimo"
+              required
+            />
+            <input
+              type="number"
+              id="max-salary"
+              name="max-salary"
+              placeholder="Máximo"
+              required
+            />
+            <input type="submit" value="Buscar" />
+          </form>
+
+            <br />
+
+          <form id="status-form">
+            <label for="status">Buscar por Status:</label>
+            <select name="status" id="status" required>
+              <option value="ATIVO">Ativo</option>
+              <option value="INATIVO">Inativo</option>
+              <option value="BLOQUEADO">Bloqueado</option>
+            </select>
+            <input type="submit" value="Buscar" />
+          </form>
+
+          <hr>
 
           <div id="employees">
             <table id="employees-table"></table>
           </div>
         </div>
-
-        <!--div id="add-employee">
-          <h1>Adicionar Funcionário</h1>
-        </div>
-
-        <div id="delete-employee"></div-->
       </main>
     </div>
 
