--- a/employees-api/employees-front-end/add-employee.html
+++ b/employees-api/employees-front-end/add-employee.html
@@ -4,113 +4,199 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Employees</title>
-    <!--link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/animations.css" />
-    <link rel="stylesheet" href="./css/main-page.css">
-    <link rel="stylesheet" href="./css/sidebar.css"-->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="./css/profile-picture.css" />
+    <link rel="stylesheet" href="./css/menu.css" />
+    <link rel="stylesheet" href="./css/left-column.css" />
+    <link rel="stylesheet" href="./css/add-form.css" />
+    <style>
+      html,
+      body,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: "Roboto", sans-serif;
+      }
+    </style>
   </head>
-  <body>
-    <div id="main-page">
-      <aside class="animate-right sidebar">
-        <header>
-          <img src="#" alt="Employees" />
+  <body class="w3-light-grey">
+    <!-- Page Container -->
+    <div
+      id="page-container"
+      class="w3-content w3-margin-top"
+      style="max-width: 1400px"
+    >
+      <!-- The Grid -->
+      <div class="w3-row-padding">
+        <!-- Left Column -->
+        <div class="w3-third left-column">
+          <div class="w3-white w3-text-grey w3-card-4">
+            <div class="w3-display-container">
+              <img
+                id="profile-picture"
+                src="./images/employees.png"
+                alt="Employees Image"
+              />
+            </div>
 
-          <a href="index.html">Buscar Funcionários</a>
-          <a href="add-employee.html">Inserir/Atualizar Funcionário</a>
-          <a href="delete-employee.html">Excluir Funcionário</a>
-        </header>
-      </aside>
+            <div class="w3-container menu-item">
+              <p>
+                <i
+                  class="fa fa-search fa-fw w3-margin-right w3-large w3-text-teal"
+                ></i
+                ><a href="index.html">Buscar Funcionários</a>
+              </p>
+              <p>
+                <i
+                  class="fa fa-plus fa-fw w3-margin-right w3-large w3-text-teal"
+                ></i
+                ><a href="add-employee.html">Inserir/Atualizar Funcionário</a>
+              </p>
+              <p>
+                <i
+                  class="fa fa-times fa-fw w3-margin-right w3-large w3-text-teal"
+                ></i
+                ><a href="delete-employee.html">Excluir Funcionário</a>
+              </p>
+            </div>
+          </div>
+          <br />
 
-      <main class="main with-sidebar">
-        <div id="add-employee">
-          <h1>Inserir/Atualizar Funcionário</h1>
-
-          <form id="add-form">
-            <label for="name">Nome:</label>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              placeholder="Digite aqui..."
-              required
-            />
-
-            <br />
-
-            <label for="cpf">CPF:</label>
-            <input
-              type="text"
-              id="cpf"
-              name="cpf"
-              placeholder="Ex: 999.999.999-99"
-              data-mask="999.999.999-99"
-              required
-            />
-
-            <br />
-
-            <label for="position">Cargo:</label>
-            <input
-              type="text"
-              id="position"
-              name="position"
-              placeholder="Digite aqui..."
-              required
-            />
-
-            <br />
-
-            <label for="date">Data de Cadastro:</label>
-            <input
-              type="text"
-              id="date"
-              name="date"
-              placeholder="Ex: dd/mm/yyyy"
-              data-mask="99/99/9999"
-              required
-            />
-
-            <br />
-
-            <label for="uf">UF de Nascimento:</label>
-            <input
-              type="text"
-              id="uf"
-              name="uf"
-              placeholder="Digite aqui..."
-              required
-            />
-
-            <br>
-
-            <label for="salary">Salário:</label>
-            <input
-              type="number"
-              id="salary"
-              name="salary"
-              placeholder="Digite aqui..."
-              required
-            />
-            
-            <br>
-
-            <label for="status">Status:</label>
-            <select name="status" id="status" required>
-                <option value="ATIVO">Ativo</option>
-                <option value="INATIVO">Inativo</option>
-                <option value="BLOQUEADO">Bloqueado</option>
-            </select>
-
-            <br />
-            <input type="submit" value="Inserir" />
-          </form>
+          <!-- End Left Column -->
         </div>
-      </main>
+
+        <!-- Right Column -->
+        <div class="w3-twothird right-column">
+          <div
+            class="w3-container w3-card w3-white w3-margin-bottom section"
+            id="about-me"
+          >
+            <h2 class="w3-text-grey w3-padding-16">
+              <i
+                class="fa fa-plus fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+              ></i
+              >Inserir/Atualizar Funcionário
+            </h2>
+            <div class="w3-container">
+              <div id="add-employee">
+                <form id="add-form">
+                  <div id="field">
+                    <label for="name" class="w3-text-grey"><b>Nome:</b></label>
+                    <input
+                      type="text"
+                      id="name"
+                      name="name"
+                      placeholder="Digite aqui..."
+                      required
+                    />
+                  </div>
+
+                  <div id="field">
+                    <label for="cpf" class="w3-text-grey"><b>CPF:</b></label>
+                    <input
+                      type="text"
+                      id="cpf"
+                      name="cpf"
+                      placeholder="Ex: 999.999.999-99"
+                      data-mask="999.999.999-99"
+                      required
+                    />
+                  </div>
+
+                  <div id="field">
+                    <label for="position" class="w3-text-grey"
+                      ><b>Cargo:</b></label
+                    >
+                    <input
+                      type="text"
+                      id="position"
+                      name="position"
+                      placeholder="Digite aqui..."
+                      required
+                    />
+                  </div>
+
+                  <div id="field">
+                    <label for="date" class="w3-text-grey"
+                      ><b>Data de Cadastro:</b></label
+                    >
+                    <input
+                      type="text"
+                      id="date"
+                      name="date"
+                      placeholder="Ex: dd/mm/yyyy"
+                      data-mask="99/99/9999"
+                      required
+                    />
+                  </div>
+
+                  <div id="field">
+                    <label for="uf" class="w3-text-grey"
+                      ><b>UF de Nascimento:</b></label
+                    >
+                    <input
+                      type="text"
+                      id="uf"
+                      name="uf"
+                      placeholder="Digite aqui..."
+                      required
+                    />
+                  </div>
+
+                  <div id="field">
+                    <label for="salary" class="w3-text-grey"
+                      ><b>Salário:</b></label
+                    >
+                    <input
+                      type="number"
+                      id="salary"
+                      name="salary"
+                      placeholder="Digite aqui..."
+                      required
+                    />
+                  </div>
+
+                  <div id="field">
+                    <label for="status" class="w3-text-grey"
+                      ><b>Status:</b></label
+                    >
+                    <select name="status" id="status" required>
+                      <option value="ATIVO">Ativo</option>
+                      <option value="INATIVO">Inativo</option>
+                      <option value="BLOQUEADO">Bloqueado</option>
+                    </select>
+                  </div>
+
+                  <div id="submit">
+                    <input type="submit" value="Inserir" />
+                  </div>
+                </form>
+              </div>
+              <br />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--footer class="w3-container w3-teal w3-center w3-margin-top section">
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+      </footer-->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.12/jquery.mask.min.js"></script>
-    <script src="./scripts/addEmployee.js"></script>
+    <script src="./scripts/add-employee.js"></script>
   </body>
 </html>
