--- a/employees-api/employees-front-end/delete-employee.html
+++ b/employees-api/employees-front-end/delete-employee.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/profile-picture.css" />
     <link rel="stylesheet" href="./css/menu.css" />
     <link rel="stylesheet" href="./css/left-column.css" />
+    <link rel="stylesheet" href="./css/delete-form.css" />
     <style>
       html,
       body,
@@ -91,16 +92,19 @@
               <div id="delete-employee">
                 <form id="delete-form">
                   <label for="cpf" class="w3-text-grey"><b>CPF:</b></label>
-                  <input
-                    type="text"
-                    id="cpf"
-                    name="cpf"
-                    placeholder="Ex: 999.999.999-99"
-                    data-mask="999.999.999-99"
-                    required
-                  />
-
-                  <input type="submit" value="Excluir" />
+                  <div id="field">
+                    <input
+                      type="text"
+                      id="cpf"
+                      name="cpf"
+                      placeholder="Ex: 999.999.999-99"
+                      data-mask="999.999.999-99"
+                      required
+                    />
+                  </div>
+                  <div id="submit">
+                    <input type="submit" value="Excluir" />
+                  </div>
                 </form>
               </div>
               <br />
