Adding right-column.css.

--- a/employees-api/employees-front-end/add-employee.html
+++ b/employees-api/employees-front-end/add-employee.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/menu.css" />
     <link rel="stylesheet" href="./css/left-column.css" />
     <link rel="stylesheet" href="./css/add-form.css" />
+    <link rel="stylesheet" href="./css/right-column.css" />
     <style>
       html,
       body,
@@ -80,7 +81,7 @@
         <div class="w3-twothird right-column">
           <div
             class="w3-container w3-card w3-white w3-margin-bottom section"
-            id="about-me"
+            id="right-column"
           >
             <h2 class="w3-text-grey w3-padding-16">
               <i
