Formatting the employees table.

--- a/employees-api/employees-front-end/index.html
+++ b/employees-api/employees-front-end/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/left-column.css" />
     <link rel="stylesheet" href="./css/search-form.css" />
     <link rel="stylesheet" href="./css/right-column.css" />
+    <link rel="stylesheet" href="./css/table.css" />
     <style>
       html,
       body,
